--- a/compare.Rmd
+++ b/compare.Rmd
@@ -6,7 +6,13 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE)
+```
+
+# load packages
+```{r}
+library(tidyverse)
+library(knitr)
 ```
 
 # define variables
@@ -27,42 +33,11 @@ intensities = read.csv(paste0(outputDir,study,'_globalIntensities.csv'))
 manual = read.csv(paste0(outputDir,study,'_manuallyCoded.csv'))
 ```
 
-# create trash regressors
-```{r}
-trash = intensities %>% group_by(subjectID, run) %>%
-        mutate(Diff = volMean - lag(volMean)) %>%
-        ungroup %>%
-        mutate(volume = as.integer(volume),
-               meanDiff = mean(Diff, na.rm=TRUE),
-               sdDiff = sd(Diff, na.rm=TRUE),
-               thresholdDiff = sdDiff*1.5, 
-               trashDiff = ifelse(Diff > (meanDiff + thresholdDiff) | Diff < (meanDiff - thresholdDiff), 1, 0),
-               behind = lead(trashDiff), 
-               ahead = lag(trashDiff), 
-               trashDiff = ifelse(trashDiff == 0 & behind == 1 & ahead == 1, 1, trashDiff)) %>%
-        mutate(behind = lag(trashDiff),
-               ahead = lead(trashDiff),
-               trashDiff = ifelse(trashDiff == 0 & behind == 1 & ahead == 1, 1, trashDiff),
-               behind = lag(trashDiff),
-               ahead = lead(trashDiff),
-               aheadVal = lead(Diff),
-               # reduce false positives on last volume in motion sequence
-               trashDiff = ifelse(trashDiff == 1 & behind == 1 & ahead == 0 & aheadVal < (meanDiff + sdDiff) & aheadVal > (meanDiff - sdDiff), 0, trashDiff)) %>%
-        select(subjectID, run, volume, Diff, trashDiff, trash)
-```
-
 # compare to manual data
 ```{r}
 # filter trash dataframe and join with filteredMotion
 joined = trash %>% 
-  mutate(behind = lag(trashDiff),
-         ahead = lead(trashDiff),
-         trashDiff = ifelse(trashDiff == 0 & behind == 1 & ahead == 1, 1, trashDiff),
-         behind = lag(trashDiff),
-         ahead = lead(trashDiff),
-         aheadVal = lead(Diff),
-         # reduce false positives on last volume in motion sequence
-         trashDiff = ifelse(trashDiff == 1 & behind == 1 & ahead == 0 & aheadVal < (meanDiff + sdDiff) & aheadVal > (meanDiff - sdDiff), 0, trashDiff)) %>%
+  left_join(., manual, by = c("subjectID","run","volume")) %>%
   select(subjectID, run, volume, Diff, trashDiff, trash)
 
 # check false negatives
@@ -76,11 +51,13 @@ hits = joined %>% filter(trashDiff == 1 & trash == 1)
 ```
 
 # summarize results
+## print group-level results
 ```{r}
-# print group-level results
-data.frame(falseNeg = length(falseNeg$trash), falsePos = length(falsePos$trash), hits = length(hits$trash)) %>% kable(format = "pandoc")
+data.frame(falseNeg = length(falseNeg$trash), falsePos = length(falsePos$trash), hits = length(hits$trash)) %>% knitr::kable(., format = "pandoc")
+```
 
-# summarize by participants
+## summarize by participants
+```{r}
 nVol = joined %>% group_by(subjectID) %>% summarize(nVol = length(volume))
 summaryPos = falsePos %>% group_by(subjectID) %>% summarize(falsePos = sum(trashDiff, na.rm=T))
 summaryNeg = falseNeg %>% group_by(subjectID) %>% summarize(falseNeg = sum(trash, na.rm=T))
@@ -91,8 +68,10 @@ summaryPosNeg = nVol %>%
          falsePos = ifelse(is.na(falsePos), 0, falsePos), 
          totalErrors = falsePos + falseNeg,
          percentErrors = (totalErrors/nVol)*100)
+```
 
 # print subject-level results
+```{r}
 joined %>% group_by(subjectID) %>% 
   summarise(trashManual = sum(trash, na.rm = T), 
             trashAuto = sum(trashDiff, na.rm = T)) %>%
