--- a/compare.Rmd
+++ b/compare.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE, fig.width = 12)
 ```
 
 # load packages
@@ -31,6 +31,11 @@ trash = read.csv(paste0(outputDir,study,'_autoTrash.csv'))
 
 # manually coded file created using manually_coded.R
 manual = read.csv(paste0(outputDir,study,'_manuallyCoded.csv'))
+
+# afni 3dToutCount outlier created using merge_outcount.R
+outcount = read.csv(paste0(outputDir,study,'_outcount.csv')) %>% 
+  filter(poly == "p2") %>%
+  mutate(trashOut = ifelse(outliers > .075, 1, 0))
 ```
 
 # compare to manual data
@@ -38,34 +43,47 @@ manual = read.csv(paste0(outputDir,study,'_manuallyCoded.csv'))
 # filter trash dataframe and join with filteredMotion
 joined = trash %>% 
   left_join(., manual, by = c("subjectID","run","volume")) %>%
-  select(subjectID, run, volume, Diff.mean, Diff.sd, trashDiff, trash)
+  left_join(., outcount, by = c("subjectID","run","volume")) %>%
+  select(subjectID, run, volume, volMean, volSD, trashDiff, trashOut, trash) %>%
+  mutate(auto = ifelse(trashDiff == 1 & trash == 1, 2, 
+                                ifelse(trashDiff == 1 & trash == 0, 3, trash)),
+         outcount = ifelse(trashOut == 1 & trash == 1, 2, 
+                                ifelse(trashOut == 1 & trash == 0, 3, trash))) %>%
+  gather(compare, code, -c(subjectID, run, volume, volMean, volSD, trashDiff, trashOut, trash))
 
 # check false negatives
-falseNeg = joined %>% filter(trashDiff == 0 & trash == 1)
+falseNeg.auto = joined %>% filter(trashDiff == 0 & trash == 1)
+falseNeg.outcount = joined %>% filter(trashOut == 0 & trash == 1)
 
 # check false positives
-falsePos = joined %>% filter(trashDiff == 1 & trash == 0)
+falsePos.auto = joined %>% filter(trashDiff == 1 & trash == 0)
+falsePos.outcount = joined %>% filter(trashOut == 1 & trash == 0)
 
 # check hits
-hits = joined %>% filter(trashDiff == 1 & trash == 1)
+hits.auto = joined %>% filter(trashDiff == 1 & trash == 1)
+hits.outcount = joined %>% filter(trashOut == 1 & trash == 1)
 ```
 
 # summarize results
 ## print group-level results
 ```{r}
-data.frame(falseNeg = length(falseNeg$trash), falsePos = length(falsePos$trash), hits = length(hits$trash)) %>% knitr::kable(., format = "pandoc")
+table = data.frame(falseNeg = c(length(falseNeg.auto$trash),length(falseNeg.outcount$trash)), 
+           falsePos = c(length(falsePos.auto$trash),length(falsePos.outcount$trash)), 
+           hits = c(length(hits.auto$trash),length(hits.outcount$trash)))
+row.names(table)=c("auto","outcount")
+kable(table,format = "pandoc")
 ```
 
 ## summarize by participants
 ```{r}
 nVol = joined %>% group_by(subjectID) %>% summarize(nVol = length(volume))
-summaryPos = falsePos %>% group_by(subjectID) %>% summarize(falsePos = sum(trashDiff, na.rm=T))
-summaryNeg = falseNeg %>% group_by(subjectID) %>% summarize(falseNeg = sum(trash, na.rm=T))
+summaryPos = falsePos.auto %>% group_by(subjectID) %>% summarize(falsePos = sum(trashDiff, na.rm=T))
+summaryNeg = falseNeg.auto %>% group_by(subjectID) %>% summarize(falseNeg = sum(trash, na.rm=T))
 summaryPosNeg = nVol %>%
   full_join(., summaryPos, by = "subjectID") %>% 
   full_join(., summaryNeg, by = "subjectID") %>% 
-  mutate(falseNeg = ifelse(is.na(falseNeg), 0, falseNeg), 
-         falsePos = ifelse(is.na(falsePos), 0, falsePos), 
+  mutate(falseNeg = ifelse(is.na(falseNeg), 0, falseNeg),
+         falsePos = ifelse(is.na(falsePos), 0, falsePos),
          totalErrors = falsePos + falseNeg,
          percentErrors = (totalErrors/nVol)*100)
 ```
@@ -79,4 +97,25 @@ joined %>% group_by(subjectID) %>%
   select(-nVol) %>%
   arrange(trashManual) %>%
   kable(format = "pandoc", digits = 1)
+```
+
+```{r}
+# visualize for each subject subject
+joined.plot = joined %>% mutate(code = as.factor(code)) %>%
+  select(subjectID, run, volume, volMean, volSD, compare, code) %>%
+  gather(measure, value, -c(subjectID, run, compare, volume, code))
+
+nada = joined.plot %>% group_by(subjectID) %>%
+  do({
+    plot = ggplot(., aes(volume, value)) + 
+      geom_point(aes(color = code)) + 
+      geom_line() + 
+      facet_grid(measure + compare ~ run, scales= "free") +
+      scale_colour_hue(drop = FALSE) +
+      scale_colour_discrete(labels=c("not trash", "false neg", "hit", "false pos")) + 
+      labs(title = .$subjectID[[1]])
+    print(plot)
+    #ggsave(plot, file=paste0(outputDir,'plots/',.$subjectID[[1]],'.png'), width = 12)
+    data.frame()
+  })
 ```
